@@ -1,6 +1,7 @@
 s3cmd 0.9.9-pre5
 ================
 * New command 'setacl' for setting ACL on existing objects.
+* Recursive [put] with a slightly different semantic.
 
 s3cmd 0.9.9-pre4 - 2008-12-30
 ================
