@@ -1,3 +1,7 @@
+2009-01-15  Michal Ludvig  <michal@logix.cz>
+
+	* s3cmd, S3/S3Uri.py, NEWS: Support for recursive 'put'.
+
 2009-01-13  Michal Ludvig  <michal@logix.cz>
 
 	* TODO: Updated.
